# vis

./: .gitignore  1.tiff  2.tiff  README.md  stack.yaml  vis.cabal
src/: Main.hs  ProcessImage.hs
